v1.99.11
----------------------------------------------------------------------------------------------------
 * Rework of MD's contribution to httpd 'server-status' page. Better formatting, reordering, using
   absolute GMT timestamps.

v1.99.10
----------------------------------------------------------------------------------------------------
 * MD status now initialized fully in global list. Fixes new status handler to assess
   things even when running in non-privileged setup where access to file system is no
   longer allowed.

v1.99.9
----------------------------------------------------------------------------------------------------
 * A domain that is managed by md now exposes a status resource at /.httpd/certificate-status
   in JSON format. This lists serial number, valid-from, expires and the cert itself in base64url
   encoding. Not highly relevant since the connection exposed the certificate already.
   When a domain certificate has been renewed however, the same properties of the renewed
   cert are available under the field "staging". When the server is restarted and the cert
   is activated, these disappear again. This makes it easy to scan domains for pending
   certificate renewals and also gives information of upcoming certificates right away.
 * Added MD section to Apache's "server-status" page listing all managed domains and their
   settings, renewal status and error count.

v1.99.8
----------------------------------------------------------------------------------------------------
 * Merge of changes up to  1.1.19
 * Fix for #117, explicitly set file permissions to work around umask defaults.

v1.99.7
----------------------------------------------------------------------------------------------------
 * Fix by @nono303 to fix the Windows build that was broken in the last release.

v1.99.6
----------------------------------------------------------------------------------------------------