@@ -280,7 +280,7 @@ static apr_status_t assess_and_drive(md_cmd_ctx *ctx, md_t *md)
                                               reset, NULL, ctx->p))) {
             md_log_perror(MD_LOG_MARK, MD_LOG_INFO, rv, ctx->p, "%s: loading", md->name);
             
-            rv = md_reg_load(ctx->reg, md->name, ctx->env, ctx->p);
+            rv = md_reg_load_staging(ctx->reg, md, ctx->env, ctx->p);
             
             if (APR_SUCCESS == rv) {
                 msg = "new credentials active on next server restart";
